--- a/configure.ac
+++ b/configure.ac
@@ -22,10 +22,10 @@
 
 # Initialize Autoconf
 AC_PREREQ([2.60])
-AC_INIT([xf86-video-suncg14],
+AC_INIT([xlibre-xf86-video-suncg14],
         [1.2.0],
-        [https://gitlab.freedesktop.org/xorg/driver/xf86-video-suncg14/-/issues],
-        [xf86-video-suncg14])
+        [https://github.com/X11Libre/xf86-video-suncg14/issues],
+        [xlibre-xf86-video-suncg14])
 AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_AUX_DIR(.)
